--- a/style.css
+++ b/style.css
@@ -2128,6 +2128,7 @@ object {
       transition-property: opacity;
       width: 40px; }
   .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide {
+    background-color: #626262;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -2141,7 +2142,6 @@ object {
       .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide {
         height: 155px; } }
     .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content {
-      background: #626262;
       height: 100%;
       left: 0;
       position: absolute;
